Envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8002
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - ["*"]
                      routes:
                        - match:
                            prefix: "/api/User"
                          route:
                            cluster: multisecurity
                        - match:
                            prefix: "/api/Account"
                          route:
                            cluster: multicuenta
                        - match:
                            prefix: "/api/Transaction/Deposit"
                          route:
                            cluster: multideposito
                        - match:
                            prefix: "/api/Transaction/Withdrawal"
                          route:
                            cluster: multiretiro
                        - match:
                            prefix: "/api/Notifications"
                          route:
                            cluster: multinotificacion
                        - match:
                            prefix: "/api/History"
                          route:
                            cluster: multihistory
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: multisecurity
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multisecurity
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multisecurity
                      port_value: 8079
    - name: multicuenta
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multicuenta
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multicuenta
                      port_value: 8080
    - name: multideposito
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multideposito
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multideposito
                      port_value: 8081
    - name: multiretiro
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multiretiro
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multiretiro
                      port_value: 8082
    - name: multinotificacion
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multinotificacion
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multinotificacion
                      port_value: 8083
    - name: multihistory
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: multihistory
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: multihistory
                      port_value: 8084
